--- a/testMall/package.json
+++ b/testMall/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.17.0",
     "mongoose": "^4.13.4",
     "vue": "^2.5.2",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-lazyload": "^1.1.4",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
